--- a/Youtube Clone/styles/header.css
+++ b/Youtube Clone/styles/header.css
@@ -12,6 +12,7 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 100;
 }
 
 .left-section {
@@ -103,4 +104,25 @@
     font-family: Roboto, Arial;
     font-size: 16px;
 }
+
+.notifications-icon-container {
+    position: relative;
+}
+
+.notifications-count {
+    position: absolute;
+    top: -2px;
+    right: -5px;
+    background-color: rgb(200, 0, 0);
+    color: white;
+    font-family: roboto,arial;
+    font-size: 11px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    border-radius: 10px;
+}
+
+
 
