--- a/Youtube Clone/styles/video.css
+++ b/Youtube Clone/styles/video.css
@@ -33,9 +33,6 @@
     vertical-align: top;
   }
 
-  .video-info {
-
-  }
 
   .profile-picture {
     width: 40px;
@@ -44,6 +41,7 @@
 
   .thumbnail-row {
     margin-bottom: 12px;
+    position: relative;
   }
 
   .video-author,
@@ -61,4 +59,21 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 16px;
     row-gap: 30px;
+  }
+
+  .video-time {
+    background-color: black;
+    color: white;
+    font-family: roboto,arial;
+    font-size: 12px;
+    font-weight: 500;
+    border-radius: 2px;
+    position: absolute;
+    bottom: 8px;
+    right: 5px;
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+
   }
