Initial selfTaught commit

--- a/Youtube Clone/styles/video.css
+++ b/Youtube Clone/styles/video.css
@@ -13,7 +13,7 @@
     font-size: 14px;
     font-weight: 500;
     line-height: 20px;
-    margin-bottom: 12px;
+    margin-bottom: 10px;
   }
 
   .video-preview {
@@ -35,12 +35,12 @@
 
 
   .profile-picture {
-    width: 40px;
+    width: 36px;
     border-radius: 50px;
   }
 
   .thumbnail-row {
-    margin-bottom: 12px;
+    margin-bottom: 8px;
     position: relative;
   }
 
@@ -56,9 +56,21 @@
 
   .video-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     column-gap: 16px;
-    row-gap: 30px;
+    row-gap: 40px;
+  }
+
+  @media (max-width: 750px){
+    .video-grid {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+
+  @media (min-width: 1000px) {
+    .video-grid {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
   }
 
   .video-time {
