--- a/Youtube Clone/styles/general.css
+++ b/Youtube Clone/styles/general.css
@@ -1,6 +1,8 @@
 body {
-  padding-left: 50px;
+  padding-left: 96px;
+  padding-right: 24px;
   padding-top: 80px;
+  background-color: rgb(248, 248, 248);
 }
 
 p {
