--- a/Youtube Clone/styles/header.css
+++ b/Youtube Clone/styles/header.css
@@ -67,11 +67,19 @@
     border-style: solid;
     border-color: rgb(197, 197, 197);
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.05);
+
+}
+
+.upload-container, .search-button, .voice-button {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .search-icon {
-    width: 24px;
-    margin-top: 4px;   
+    width: 24px;  
 }
 
 .voice-button {
@@ -123,6 +131,33 @@
     padding-bottom: 2px;
     border-radius: 10px;
 }
+
+.search-button .tooltip, 
+.voice-button .tooltip,
+.upload-container .tooltip {
+    position: absolute;
+    background-color: lightgray;
+    color: white;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 8px;
+    padding-right: 8px;
+    font-size: 12px;
+    border-radius: 2px;
+    bottom: -30px;
+    opacity: 0;
+    transition: opacity 0.15s;
+    pointer-events: none;
+    white-space: nowrap;
+    font-family: roboto,arial;
+}
+
+.search-button:hover .tooltip,
+.voice-button:hover .tooltip,
+.upload-container:hover .tooltip {
+    opacity: 1;
+}
+
 
 
 
