--- a/Youtube Clone/styles/sidebar.css
+++ b/Youtube Clone/styles/sidebar.css
@@ -3,6 +3,35 @@
     left: 0;
     bottom: 0;
     top: 55px;
-    width: 50px;
+    width: 72px;
     background-color: white;
+    z-index: 200;
+    padding-top: 5px;
+}
+
+.sidebar-link {
+    background-color: rgb(255, 255, 255);
+    height: 74px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+    
+}
+
+.sidebar-link:hover {
+    background-color: rgb(237, 237, 237);
+}
+
+.sidebar-link img {
+    height: 24px;
+    margin-bottom: 4px;
+}
+
+.sidebar-link div {
+    font-family: roboto, arial;
+    font-size: 10px;
+
+
 }
